altv-capi/client/altv-capi.hpp


struct alt_String {
    char * data;
    unsigned long long size;
};
struct alt_Array_MValue {
    struct alt_MValue* data;
    unsigned long long size;
    unsigned long long capacity;
};
struct alt_MValue {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
enum alt_MValue_Type {
    ALT_MVALUE_TYPE_NIL = 0,
    ALT_MVALUE_TYPE_BOOL = 1,
    ALT_MVALUE_TYPE_INT = 2,
    ALT_MVALUE_TYPE_UINT = 3,
    ALT_MVALUE_TYPE_DOUBLE = 4,
    ALT_MVALUE_TYPE_STRING = 5,
    ALT_MVALUE_TYPE_LIST = 6,
    ALT_MVALUE_TYPE_DICT = 7,
    ALT_MVALUE_TYPE_ENTITY = 8,
    ALT_MVALUE_TYPE_FUNCTION = 9
};
struct alt_MValue_Function {
    void * invoker;
};
struct alt_MValue_Storage_longlong {
    unsigned long long refCount;
    long long value;
};
struct alt_MValue_Storage_unsignedlonglong {
    unsigned long long refCount;
    unsigned long long value;
};
struct alt_MValue_Storage_double {
    unsigned long long refCount;
    double value;
};
struct alt_MValue_Storage_String {
    unsigned long long refCount;
    struct alt_String value;
};
struct alt_MValue_Storage_Array_MValue {
    unsigned long long refCount;
    struct alt_Array_MValue value;
};
struct alt_MValue_Storage_IBaseObjectPtr {
    unsigned long long refCount;
    struct alt_IBaseObject* value;
};
struct alt_MValue_Storage_MValue_Function {
    unsigned long long refCount;
    struct alt_MValue_Function value;
};
struct alt_MValueList {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
CAPI void alt_MValueList_free(struct alt_MValueList* ptr);
CAPI struct alt_MValueList* alt_MValueList_Create();
CAPI struct alt_MValueList* alt_MValueList_Create_1(_Bool* val);
CAPI struct alt_MValueList* alt_MValueList_Create_2(long long* val);
CAPI struct alt_MValueList* alt_MValueList_Create_3(unsigned long long* val);
CAPI struct alt_MValueList* alt_MValueList_Create_4(double* val);
CAPI struct alt_MValueList* alt_MValueList_Create_5(struct alt_String* val);
CAPI struct alt_MValueList* alt_MValueList_Create_6(struct alt_Array_MValue* val);
CAPI struct alt_MValueList* alt_MValueList_Create_8(struct alt_IBaseObject** val);
CAPI struct alt_MValueList* alt_MValueList_Create_9(struct alt_MValue_Function* val);
CAPI struct alt_MValueList* alt_MValueList_Create_10(int val);
CAPI struct alt_MValueList* alt_MValueList_Create_11(unsigned int val);
CAPI struct alt_MValueList* alt_MValueList_Create_12(char* val);
CAPI struct alt_MValueList* alt_MValueList_Create_14(struct alt_MValue* that);
CAPI void alt_MValueList_Assign_constMValueRef(struct alt_MValueList* _instance, struct alt_MValue* that);
CAPI _Bool alt_MValueList_ToBool(struct alt_MValueList* _instance);
CAPI long long alt_MValueList_ToInt(struct alt_MValueList* _instance);
CAPI unsigned long long alt_MValueList_ToUInt(struct alt_MValueList* _instance);
CAPI struct alt_String* alt_MValueList_ToString(struct alt_MValueList* _instance);
CAPI enum alt_MValue_Type alt_MValueList_GetType(struct alt_MValueList* _instance);
CAPI struct alt_MValueList* alt_MValueList_Create_15();
CAPI struct alt_MValueList* alt_MValueList_Create_16(unsigned long long size);
CAPI struct alt_MValueList* alt_MValueList_Create_17(struct alt_Array_MValue* list);
CAPI struct alt_MValueList* alt_MValueList_Create_18(struct alt_MValue* val);
CAPI unsigned long long alt_MValueList_GetSize(struct alt_MValueList* _instance);
CAPI struct alt_MValue* alt_MValueList_Access_uint64_t(struct alt_MValueList* _instance, unsigned long long key);
CAPI struct alt_Array_MValue* alt_MValueList_To_Array_MValue(struct alt_MValueList* _instance);
CAPI void alt_MValueList_Push(struct alt_MValueList* _instance, struct alt_MValue* val);
CAPI struct alt_MValueList* alt_MValueList_Create_19(struct alt_MValueList* _p0);
CAPI struct alt_MValueList* alt_MValueList_Create_20(struct alt_MValueList* _p0);
CAPI void alt_MValueList_Assign_MValueListRefRef(struct alt_MValueList* _instance, struct alt_MValueList* _p0);
CAPI void alt_MValueList_Assign_constMValueListRef(struct alt_MValueList* _instance, struct alt_MValueList* _p0);
struct alt_MValueDict {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
struct alt_IBaseObject {};