client/src/altv_capi.rs

t_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Storage_longlong > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Storage_longlong ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_longlong > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_longlong ) , "::" , stringify ! ( refCount ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_longlong > ( ) ) ) . value as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_longlong ) , "::" , stringify ! ( value ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Storage_unsignedlonglong { pub refCount : :: std :: os :: raw :: c_ulonglong , pub value : :: std :: os :: raw :: c_ulonglong , } # [ test ] fn bindgen_test_layout_alt_MValue_Storage_unsignedlonglong ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Storage_unsignedlonglong > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Storage_unsignedlonglong ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Storage_unsignedlonglong > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Storage_unsignedlonglong ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_unsignedlonglong > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_unsignedlonglong ) , "::" , stringify ! ( refCount ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_unsignedlonglong > ( ) ) ) . value as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_unsignedlonglong ) , "::" , stringify ! ( value ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Storage_double { pub refCount : :: std :: os :: raw :: c_ulonglong , pub value : f64 , } # [ test ] fn bindgen_test_layout_alt_MValue_Storage_double ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Storage_double > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Storage_double ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Storage_double > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Storage_double ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_double > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_double ) , "::" , stringify ! ( refCount ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_double > ( ) ) ) . value as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_double ) , "::" , stringify ! ( value ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Storage_String { pub refCount : :: std :: os :: raw :: c_ulonglong , pub value : alt_String , } # [ test ] fn bindgen_test_layout_alt_MValue_Storage_String ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Storage_String > ( ) , 24usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Storage_String ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Storage_String > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Storage_String ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_String > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_String ) , "::" , stringify ! ( refCount ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_String > ( ) ) ) . value as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_String ) , "::" , stringify ! ( value ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Storage_Array_MValue { pub refCount : :: std :: os :: raw :: c_ulonglong , pub value : alt_Array_MValue , } # [ test ] fn bindgen_test_layout_alt_MValue_Storage_Array_MValue ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Storage_Array_MValue > ( ) , 32usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Storage_Array_MValue ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Storage_Array_MValue > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Storage_Array_MValue ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_Array_MValue > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_Array_MValue ) , "::" , stringify ! ( refCount ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_Array_MValue > ( ) ) ) . value as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_Array_MValue ) , "::" , stringify ! ( value ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Storage_IBaseObjectPtr { pub refCount : :: std :: os :: raw :: c_ulonglong , pub value : * mut alt_IBaseObject , } # [ test ] fn bindgen_test_layout_alt_MValue_Storage_IBaseObjectPtr ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Storage_IBaseObjectPtr > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Storage_IBaseObjectPtr ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Storage_IBaseObjectPtr > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Storage_IBaseObjectPtr ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_IBaseObjectPtr > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_IBaseObjectPtr ) , "::" , stringify ! ( refCount ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_IBaseObjectPtr > ( ) ) ) . value as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_IBaseObjectPtr ) , "::" , stringify ! ( value ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValue_Storage_MValue_Function { pub refCount : :: std :: os :: raw :: c_ulonglong , pub value : alt_MValue_Function , } # [ test ] fn bindgen_test_layout_alt_MValue_Storage_MValue_Function ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValue_Storage_MValue_Function > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValue_Storage_MValue_Function ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValue_Storage_MValue_Function > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValue_Storage_MValue_Function ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_MValue_Function > ( ) ) ) . refCount as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_MValue_Function ) , "::" , stringify ! ( refCount ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValue_Storage_MValue_Function > ( ) ) ) . value as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValue_Storage_MValue_Function ) , "::" , stringify ! ( value ) ) ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValueList { pub type_ : alt_MValue_Type , pub storage : * mut alt_MValue_Storage , } # [ test ] fn bindgen_test_layout_alt_MValueList ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_MValueList > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_MValueList ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_MValueList > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_MValueList ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValueList > ( ) ) ) . type_ as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValueList ) , "::" , stringify ! ( type_ ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_MValueList > ( ) ) ) . storage as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_MValueList ) , "::" , stringify ! ( storage ) ) ) ; } extern "C" { pub fn alt_MValueList_free ( ptr : * mut alt_MValueList ) ; } extern "C" { pub fn alt_MValueList_Create ( ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_1 ( val : * mut bool ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_2 ( val : * mut :: std :: os :: raw :: c_longlong ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_3 ( val : * mut :: std :: os :: raw :: c_ulonglong ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_4 ( val : * mut f64 ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_5 ( val : * mut alt_String ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_6 ( val : * mut alt_Array_MValue ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_8 ( val : * mut * mut alt_IBaseObject ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_9 ( val : * mut alt_MValue_Function ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_10 ( val : :: std :: os :: raw :: c_int ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_11 ( val : :: std :: os :: raw :: c_uint ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_12 ( val : * mut :: std :: os :: raw :: c_char ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_14 ( that : * mut alt_MValue ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Assign_constMValueRef ( _instance : * mut alt_MValueList , that : * mut alt_MValue ) ; } extern "C" { pub fn alt_MValueList_ToBool ( _instance : * mut alt_MValueList ) -> bool ; } extern "C" { pub fn alt_MValueList_ToInt ( _instance : * mut alt_MValueList ) -> :: std :: os :: raw :: c_longlong ; } extern "C" { pub fn alt_MValueList_ToUInt ( _instance : * mut alt_MValueList ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_MValueList_ToString ( _instance : * mut alt_MValueList ) -> * mut alt_String ; } extern "C" { pub fn alt_MValueList_GetType ( _instance : * mut alt_MValueList ) -> alt_MValue_Type ; } extern "C" { pub fn alt_MValueList_Create_15 ( ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_16 ( size : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_17 ( list : * mut alt_Array_MValue ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_18 ( val : * mut alt_MValue ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_GetSize ( _instance : * mut alt_MValueList ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_MValueList_Access_uint64_t ( _instance : * mut alt_MValueList , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_MValue ; } extern "C" { pub fn alt_MValueList_To_Array_MValue ( _instance : * mut alt_MValueList ) -> * mut alt_Array_MValue ; } extern "C" { pub fn alt_MValueList_Push ( _instance : * mut alt_MValueList , val : * mut alt_MValue ) ; } extern "C" { pub fn alt_MValueList_Create_19 ( _p0 : * mut alt_MValueList ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Create_20 ( _p0 : * mut alt_MValueList ) -> * mut alt_MValueList ; } extern "C" { pub fn alt_MValueList_Assign_MValueListRefRef ( _instance : * mut alt_MValueList , _p0 : * mut alt_MValueList ) ; } extern "C" { pub fn alt_MValueList_Assign_constMValueListRef ( _instance : * mut alt_MValueList , _p0 : * mut alt_MValueList ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_MValueDict { pub ty